--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.4",
     "@hookform/resolvers": "^2.9.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
@@ -15,12 +16,16 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "dayjs": "^1.11.8",
+    "embla-carousel-react": "^8.0.0-rc07",
     "js-cookie": "^3.0.5",
+    "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.7.4",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
